# tdo

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  setup.sh  uninstall.sh
src/: commands.rs  main.rs  storage.rs  task.rs
