[package]
name = "tdo"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.2", features = ["derive"] }
anyhow = "1.0"
colored = "3.0.0"

[dev-dependencies]
insta = "1.43.2"
