[package]
name = "tdo"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }
colored = "3.0.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utils
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0.0"

# Interactive & UI
inquire = "0.9.1"

[dev-dependencies]
insta = "1.43.2"
